@@ -300,13 +300,6 @@ void switchPage(GtkNotebook *notebook,gpointer arg1,guint thispage,gpointer user
 
 	gtk_widget_set_sensitive((GtkWidget*)menufunc,onefunc);
 	setSensitive();
-
-	if(page->lang!=NULL)
-		gtk_tool_button_set_label((GtkToolButton*)sourceFormatButton,page->lang);
-	else
-		gtk_tool_button_set_label((GtkToolButton*)sourceFormatButton,"");
-
-	gtk_widget_show_all((GtkWidget*)sourceFormatButton);
 }
 
 void copyToClip(GtkWidget* widget,gpointer data)
@@ -606,7 +599,7 @@ void doSplitView(GtkWidget *widget,gpointer user_data)
 
 	gtk_widget_show_all(page->pane);
 }
-
+void changeSourceStyle(GtkWidget* widget,gpointer data);
 bool tabPopUp(GtkWidget *widget, GdkEventButton *event,gpointer user_data)
 {
 	pageStruct* page;
@@ -651,11 +644,41 @@ bool tabPopUp(GtkWidget *widget, GdkEventButton *event,gpointer user_data)
 			gtk_menu_shell_append(GTK_MENU_SHELL(tabMenu),menuitem);
 			gtk_signal_connect(GTK_OBJECT(menuitem),"activate",G_CALLBACK(doSplitView),(void*)page);
 
+//source
+GtkWidget* menurecent;
+GtkWidget* mid;
+
+	GtkSourceLanguageManager*	lm;
+	const gchar* const*			ids;
+	int							cnt=0;
+	lm=gtk_source_language_manager_get_default();
+	ids=gtk_source_language_manager_get_language_ids(lm);
+
+		image=gtk_image_new_from_stock(GTK_STOCK_NEW,GTK_ICON_SIZE_MENU);
+		menuitem=gtk_image_menu_item_new_with_label("Source Highlight");
+		gtk_image_menu_item_set_image((GtkImageMenuItem*)menuitem,image);
+		gtk_menu_shell_append(GTK_MENU_SHELL(tabMenu),menuitem);
+
+		menurecent=gtk_menu_new();
+		gtk_menu_item_set_submenu(GTK_MENU_ITEM(menuitem),menurecent);
+
+	while(ids[cnt]!=NULL)
+		{
+			
+			mid=gtk_menu_item_new_with_label(ids[cnt]);
+			gtk_signal_connect(GTK_OBJECT(mid),"activate",G_CALLBACK(changeSourceStyle),(void*)(long)cnt);
+			gtk_menu_shell_append(GTK_MENU_SHELL(menurecent),mid);
+			cnt++;
+		}
+	gtk_widget_show_all(menuitem);
+
 			gtk_menu_attach_to_widget(GTK_MENU(tabMenu),widget,NULL);
 			gtk_menu_popup(GTK_MENU(tabMenu),NULL,NULL,NULL,NULL,event->button,event->time);
 			gtk_widget_show_all((GtkWidget*)tabMenu);
 
 			return(true);
+
+
 		}
 	else
 		return(false);
@@ -1160,12 +1183,7 @@ void changeSourceStyle(GtkWidget* widget,gpointer data)
 	GtkSourceLanguage*			lang=gtk_source_language_manager_get_language(lm,ids[(long)data]);
 
 	gtk_source_buffer_set_language(page->buffer,lang);
-	//if(page->lang!=NULL)
-	//	g_free(page->lang);
 	page->lang=strdup(ids[(long)data]);
-
-	gtk_tool_button_set_label((GtkToolButton*)sourceFormatButton,page->lang);
-	gtk_widget_show_all((GtkWidget*)sourceFormatButton);
 }
 
 
